--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=eshop
-DB_USERNAME=laravel
-DB_PASSWORD=d01879538e5f2ff27270a0793d223de8
+DB_USERNAME=root
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
