--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_ENV=local
 APP_KEY=base64:dNaZScx+/kfOgrwg1j4SRXJeekKyVr0EUXQdw56ksXo=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://cvashop.herokuapp.com
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mcldisu5ppkm29wf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=eshop
-DB_USERNAME=root
-DB_PASSWORD=""
+DB_DATABASE="gr3hqmi9vdcza1bq"
+DB_USERNAME=z4dl1fme9om7xv85
+DB_PASSWORD="tiev5lmzds9v5y2r"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
