--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "intervention/image": "^2.3",
-        "stripe/stripe-php": "3.*"
+        "stripe/stripe-php": "3.*",
+                "ext-gd": "*"
 
     },
     "require-dev": {
