--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.3.*",
         "intervention/image": "^2.3",
         "stripe/stripe-php": "3.*",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "components/jquery": "1.9.*"
+
 
     },
     "require-dev": {
