--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "intervention/image": "^2.3",
         "stripe/stripe-php": "3.*",
         "ext-gd": "*",
-        "components/jquery": "1.9.*"
-
+        "components/jquery": "1.9.*",
+        "guzzlehttp/guzzle": "~6.0"
 
     },
     "require-dev": {
