Se agrega correo de confirmacion

--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=ddf6bb18fdce5c
-MAIL_PASSWORD=f260d91f249f2b
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=cvaeshop@gmail.com
+MAIL_PASSWORD=Aa1234554321
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_KEY=
